--- a/app/src/main/res/layout/add_exercise_list.xml
+++ b/app/src/main/res/layout/add_exercise_list.xml
@@ -57,7 +57,8 @@
         android:textColorHint="@color/gray"
         android:hint="sec"
         android:autofillHints="sec"
-        android:textColor="@color/gray"/>
+        android:textColor="@color/gray"
+        android:inputType="number"/>
 
     <TextView
         android:id="@+id/txtpause"
