--- a/app/src/main/res/layout/activity_add_workout.xml
+++ b/app/src/main/res/layout/activity_add_workout.xml
@@ -15,36 +15,46 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginLeft="60dp">
+        android:orientation="horizontal">
 
-
-        <TextView
-            android:id="@+id/title_tv"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            android:fontFamily="@font/mmedium"
-            android:gravity="center"
-            android:layout_gravity="center_horizontal"
-            android:text="Create workout"
-            android:textColor="@color/white"
-            android:textSize="25sp"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:orientation="horizontal">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dip"
+                android:layout_weight="1"/>
+            <TextView
+                android:id="@+id/title_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/mmedium"
+                android:gravity="center"
+                android:text="Create workout"
+                android:textColor="@color/white"
+                android:textSize="25sp" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dip"
+                android:layout_weight="1"/>
 
-        <ImageButton
-            android:id="@+id/buttoninfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:layout_marginStart="40dp"
-            android:layout_marginLeft="40dp"
-            android:background="@color/trans"
-            android:src="@drawable/ic_outline_info_24"
-            android:layout_marginTop="0dp"/>
+
+            <ImageButton
+                android:id="@+id/buttoninfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@color/trans"
+                android:gravity="center"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/ic_outline_info_24" />
+
+        </LinearLayout>
 
 
     </LinearLayout>
