--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -29,10 +29,10 @@
         android:layout_width="wrap_content"
         android:layout_height="80dp"
         android:layout_marginTop="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
         android:fontFamily="@font/mmedium"
-        android:gravity="start"
+        android:gravity="start|center"
         android:layout_gravity="start|top"
         android:text="Title"
         android:textColor="#FFFFFF"
@@ -45,6 +45,7 @@
             android:layout_weight="1" />
 
         <ImageView
+            android:id="@+id/sendbutton"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginStart="10dp"
@@ -53,7 +54,7 @@
             android:layout_marginEnd="10dp"
             android:layout_marginTop="10dp"
             android:onClick="sendWorkout"
-            android:src="@drawable/ic_baseline_share_24" />
+            android:src="@drawable/ic_baseline_send_24" />
 
     </LinearLayout>
 
